@@ -1,2 +1,11 @@
-
-setenv DEBUGINFOD_URLS "$DEBUGINFOD_URLS @DEBUGINFOD_URLS@"
+if ("@DEBUGINFOD_URLS@" != "") then
+	if ($?DEBUGINFOD_URLS) then
+		if ($%DEBUGINFOD_URLS) then
+			setenv DEBUGINFOD_URLS "$DEBUGINFOD_URLS @DEBUGINFOD_URLS@"
+		else
+			setenv DEBUGINFOD_URLS "@DEBUGINFOD_URLS@"
+		endif
+	else
+		setenv DEBUGINFOD_URLS "@DEBUGINFOD_URLS@"
+	endif
+endif
